--- a/numpy/01-NumPy Arrays.ipynb
+++ b/numpy/01-NumPy Arrays.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -338,6 +338,37 @@
    ],
    "source": [
     "np.linspace(0,10,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so the math would be ???\n",
+    "0->5  incremented 5 how is it related to 3\n",
+    "0   ->   5  ->  10\n",
+    "for 3 actually there are 2 gaps\n",
+    "so interval = (10-0)/(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  4.,  7., 10., 13.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(1, 13, 5)"
    ]
   },
   {
@@ -723,7 +754,8 @@
     }
    ],
    "source": [
-    "ranarr.argmax()"
+    "ranarr.argmax()\n",
+    "# ret -> index of min or max"
    ]
   },
   {
@@ -955,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
