some link added

--- a/jbnp to images post.ipynb
+++ b/jbnp to images post.ipynb
@@ -2,45 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# template path\n",
+    "# C:\\Users\\Lenovo ideaPad 3\\AppData\\Roaming\\Python\\share\\jupyter\\nbconvert\\templates\\latex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "text formater -> [link](https://typegrow.com/tools/linkedin-text-formatter)\n",
+    "\n",
+    "unicode helper -> [link](https://www.alt-codes.net/circle-symbols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import nbformat\n",
-    "from nbconvert import PDFExporter\n"
+    "from nbconvert import PDFExporter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = r\"D:\\coding\\data science & ml\\numpy\\provided notes\\02-Numpy Indexing and Selection.ipynb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(file) as f:\n",
-    "    jb = nbformat.reads(f.read(), as_version=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# body, res = PDFExporter().from_notebook_node(jb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,36 +55,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from traitlets.config import Config\n",
     "\n",
-    "c = Config()\n",
-    "c.PelicanSubCell.start = 5\n",
-    "c.PelicanSubCell.end = 14\n",
-    "c.PDFExporter.preprocessors = [PelicanSubCell]"
+    "def partial_pdf(start, end, save_as=\"notebook\"):\n",
+    "    ''' both end points are included '''\n",
+    "    save_as = str(save_as)\n",
+    "    \n",
+    "    c = Config()\n",
+    "    c.PelicanSubCell.start = start\n",
+    "    c.PelicanSubCell.end = end\n",
+    "    c.PDFExporter.preprocessors = [PelicanSubCell]\n",
+    "\n",
+    "    expoter = PDFExporter(config = c)\n",
+    "    body, res = expoter.from_notebook_node(jb)\n",
+    "\n",
+    "    with open(save_as+\".pdf\", \"wb\") as f:\n",
+    "        f.write(body)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expoter = PDFExporter(config = c)\n",
-    "body, res = expoter.from_notebook_node(jb)"
+    "def search(key:str):\n",
+    "    key = key.lower()\n",
+    "\n",
+    "    count = 0\n",
+    "    for cell in jb.cells:\n",
+    "        count+=1\n",
+    "        if key in cell['source'].lower():\n",
+    "            return count-1# Zero indexing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"D:\\coding\\data science & ml\\numpy\\provided notes\\nba.pdf\", \"wb\") as f:\n",
-    "    f.write(body)"
+    "# search(\"2d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def level_number(n):\n",
+    "    count = 0\n",
+    "    for cell in jb.cells:\n",
+    "        count+=1\n",
+    "        if 'execution_count' not in cell: continue\n",
+    "        if cell['execution_count']==n:\n",
+    "            return count-1# zero indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = r\"numpy\\provided notes\\02-Numpy Indexing and Selection.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(file) as f:\n",
+    "    jb = nbformat.reads(f.read(), as_version=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cell_type': 'code',\n",
+      " 'execution_count': 37,\n",
+      " 'metadata': {},\n",
+      " 'outputs': [{'data': {'text/plain': 'array([ 3,  4,  5,  6,  7,  8,  9, 10])'},\n",
+      "              'execution_count': 37,\n",
+      "              'metadata': {},\n",
+      "              'output_type': 'execute_result'}],\n",
+      " 'source': 'x = 2\\narr[arr>x]'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "n = level_number(37)\n",
+    "pprint(jb.cells[n])\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "partial_pdf(33, 40, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cell_type': 'markdown',\n",
+      " 'metadata': {},\n",
+      " 'source': '## Selection\\n'\n",
+      "           '\\n'\n",
+      "           \"Let's briefly go over how to use brackets for selection based off \"\n",
+      "           'of comparison operators.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(jb.cells[33])"
    ]
   },
   {
