--- a/jbnp to images post.ipynb
+++ b/jbnp to images post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from traitlets import Integer\n",
+    "from traitlets import Integer, List\n",
     "from nbconvert.preprocessors import Preprocessor\n",
     "\n",
     "\n",
@@ -44,30 +44,35 @@
     "\n",
     "    # I could also read the cells from nb.metadata.pelican if someone wrote a JS extension,\n",
     "    # but for now I'll stay with configurable value.\n",
-    "    start = Integer(0, help=\"first cell of notebook to be converted\").tag(config=True)\n",
-    "    end = Integer(-1, help=\"last cell of notebook to be converted\").tag(config=True)\n",
+    "    # start = Integer(0, help=\"first cell of notebook to be converted\").tag(config=True)\n",
+    "    # end = Integer(-1, help=\"last cell of notebook to be converted\").tag(config=True)\n",
+    "    cells_num = List([], help=\"list of indexed tobe included in\").tag(config=True)\n",
     "\n",
     "    def preprocess(self, nb, resources):\n",
-    "        self.log.info(\"I'll keep only cells from %d to %d\", self.start, self.end)\n",
-    "        nb.cells = nb.cells[self.start : self.end]\n",
+    "        # self.log.info(\"I'll keep only cells from %d to %d\", self.start, self.end)\n",
+    "        cells = []\n",
+    "        for i in self.cells_num:\n",
+    "            cells.append(nb.cells[i])\n",
+    "        nb.cells:list = cells\n",
     "        return nb, resources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from traitlets.config import Config\n",
     "\n",
-    "def partial_pdf(start, end, save_as=\"notebook\"):\n",
+    "def partial_pdf(cells_num:list, save_as=\"notebook\"):\n",
     "    ''' both end points are included '''\n",
     "    save_as = str(save_as)\n",
     "    \n",
     "    c = Config()\n",
-    "    c.PelicanSubCell.start = start\n",
-    "    c.PelicanSubCell.end = end\n",
+    "    # c.PelicanSubCell.start = start\n",
+    "    # c.PelicanSubCell.end = end\n",
+    "    c.PelicanSubCell.cells_num = list(cells_num)\n",
     "    c.PDFExporter.preprocessors = [PelicanSubCell]\n",
     "\n",
     "    expoter = PDFExporter(config = c)\n",
@@ -79,7 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,49 +131,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = r\"numpy\\provided notes\\02-Numpy Indexing and Selection.ipynb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file = r\"pandas\\notes\\03-DataFrames.ipynb\"\n",
     "with open(file) as f:\n",
     "    jb = nbformat.reads(f.read(), as_version=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import  chain\n",
+    "\n",
+    "# partial_pdf([1, 5], save_as=2)\n",
+    "# partial_pdf(range(31, 33+1), save_as=4)\n",
+    "partial_pdf(chain(range(38, 44+1), []), save_as=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>pre { line-height: 125%; }\n",
+       "td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }\n",
+       "span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }\n",
+       "td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\n",
+       "span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }\n",
+       ".output_html .hll { background-color: #ffffcc }\n",
+       ".output_html { background: #f8f8f8; }\n",
+       ".output_html .c { color: #3D7B7B; font-style: italic } /* Comment */\n",
+       ".output_html .err { border: 1px solid #FF0000 } /* Error */\n",
+       ".output_html .k { color: #008000; font-weight: bold } /* Keyword */\n",
+       ".output_html .o { color: #666666 } /* Operator */\n",
+       ".output_html .ch { color: #3D7B7B; font-style: italic } /* Comment.Hashbang */\n",
+       ".output_html .cm { color: #3D7B7B; font-style: italic } /* Comment.Multiline */\n",
+       ".output_html .cp { color: #9C6500 } /* Comment.Preproc */\n",
+       ".output_html .cpf { color: #3D7B7B; font-style: italic } /* Comment.PreprocFile */\n",
+       ".output_html .c1 { color: #3D7B7B; font-style: italic } /* Comment.Single */\n",
+       ".output_html .cs { color: #3D7B7B; font-style: italic } /* Comment.Special */\n",
+       ".output_html .gd { color: #A00000 } /* Generic.Deleted */\n",
+       ".output_html .ge { font-style: italic } /* Generic.Emph */\n",
+       ".output_html .gr { color: #E40000 } /* Generic.Error */\n",
+       ".output_html .gh { color: #000080; font-weight: bold } /* Generic.Heading */\n",
+       ".output_html .gi { color: #008400 } /* Generic.Inserted */\n",
+       ".output_html .go { color: #717171 } /* Generic.Output */\n",
+       ".output_html .gp { color: #000080; font-weight: bold } /* Generic.Prompt */\n",
+       ".output_html .gs { font-weight: bold } /* Generic.Strong */\n",
+       ".output_html .gu { color: #800080; font-weight: bold } /* Generic.Subheading */\n",
+       ".output_html .gt { color: #0044DD } /* Generic.Traceback */\n",
+       ".output_html .kc { color: #008000; font-weight: bold } /* Keyword.Constant */\n",
+       ".output_html .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */\n",
+       ".output_html .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */\n",
+       ".output_html .kp { color: #008000 } /* Keyword.Pseudo */\n",
+       ".output_html .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */\n",
+       ".output_html .kt { color: #B00040 } /* Keyword.Type */\n",
+       ".output_html .m { color: #666666 } /* Literal.Number */\n",
+       ".output_html .s { color: #BA2121 } /* Literal.String */\n",
+       ".output_html .na { color: #687822 } /* Name.Attribute */\n",
+       ".output_html .nb { color: #008000 } /* Name.Builtin */\n",
+       ".output_html .nc { color: #0000FF; font-weight: bold } /* Name.Class */\n",
+       ".output_html .no { color: #880000 } /* Name.Constant */\n",
+       ".output_html .nd { color: #AA22FF } /* Name.Decorator */\n",
+       ".output_html .ni { color: #717171; font-weight: bold } /* Name.Entity */\n",
+       ".output_html .ne { color: #CB3F38; font-weight: bold } /* Name.Exception */\n",
+       ".output_html .nf { color: #0000FF } /* Name.Function */\n",
+       ".output_html .nl { color: #767600 } /* Name.Label */\n",
+       ".output_html .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */\n",
+       ".output_html .nt { color: #008000; font-weight: bold } /* Name.Tag */\n",
+       ".output_html .nv { color: #19177C } /* Name.Variable */\n",
+       ".output_html .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */\n",
+       ".output_html .w { color: #bbbbbb } /* Text.Whitespace */\n",
+       ".output_html .mb { color: #666666 } /* Literal.Number.Bin */\n",
+       ".output_html .mf { color: #666666 } /* Literal.Number.Float */\n",
+       ".output_html .mh { color: #666666 } /* Literal.Number.Hex */\n",
+       ".output_html .mi { color: #666666 } /* Literal.Number.Integer */\n",
+       ".output_html .mo { color: #666666 } /* Literal.Number.Oct */\n",
+       ".output_html .sa { color: #BA2121 } /* Literal.String.Affix */\n",
+       ".output_html .sb { color: #BA2121 } /* Literal.String.Backtick */\n",
+       ".output_html .sc { color: #BA2121 } /* Literal.String.Char */\n",
+       ".output_html .dl { color: #BA2121 } /* Literal.String.Delimiter */\n",
+       ".output_html .sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */\n",
+       ".output_html .s2 { color: #BA2121 } /* Literal.String.Double */\n",
+       ".output_html .se { color: #AA5D1F; font-weight: bold } /* Literal.String.Escape */\n",
+       ".output_html .sh { color: #BA2121 } /* Literal.String.Heredoc */\n",
+       ".output_html .si { color: #A45A77; font-weight: bold } /* Literal.String.Interpol */\n",
+       ".output_html .sx { color: #008000 } /* Literal.String.Other */\n",
+       ".output_html .sr { color: #A45A77 } /* Literal.String.Regex */\n",
+       ".output_html .s1 { color: #BA2121 } /* Literal.String.Single */\n",
+       ".output_html .ss { color: #19177C } /* Literal.String.Symbol */\n",
+       ".output_html .bp { color: #008000 } /* Name.Builtin.Pseudo */\n",
+       ".output_html .fm { color: #0000FF } /* Name.Function.Magic */\n",
+       ".output_html .vc { color: #19177C } /* Name.Variable.Class */\n",
+       ".output_html .vg { color: #19177C } /* Name.Variable.Global */\n",
+       ".output_html .vi { color: #19177C } /* Name.Variable.Instance */\n",
+       ".output_html .vm { color: #19177C } /* Name.Variable.Magic */\n",
+       ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"n\">df</span>\n",
+       "</pre></div>\n"
+      ],
+      "text/latex": [
+       "\\begin{Verbatim}[commandchars=\\\\\\{\\}]\n",
+       "\\PY{n}{df}\n",
+       "\\end{Verbatim}\n"
+      ],
+      "text/plain": [
+       "df"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cell_type': 'code',\n",
-      " 'execution_count': 37,\n",
-      " 'metadata': {},\n",
-      " 'outputs': [{'data': {'text/plain': 'array([ 3,  4,  5,  6,  7,  8,  9, 10])'},\n",
-      "              'execution_count': 37,\n",
-      "              'metadata': {},\n",
-      "              'output_type': 'execute_result'}],\n",
-      " 'source': 'x = 2\\narr[arr>x]'}\n"
+      "          W         X         Y         Z       new\n",
+      "A  2.706850  0.628133  0.907969  0.503826  3.614819\n",
+      "B  0.651118 -0.319318 -0.848077  0.605965 -0.196959\n",
+      "C -2.018168  0.740122  0.528813 -0.589001 -1.489355\n",
+      "D  0.188695 -0.758872 -0.933237  0.955057 -0.744542\n",
+      "E  0.190794  1.978757  2.605967  0.683509  2.796762\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div class=\"output_html\"><div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "      <td>3.614819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
+       "      <td>-0.196959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>-2.018168</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>-0.589001</td>\n",
+       "      <td>-1.489355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
+       "      <td>-0.744542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "      <td>2.796762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div></div>"
+      ],
       "text/plain": [
-       "40"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 37,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,40 +342,9 @@
    "source": [
     "from pprint import pprint\n",
     "\n",
-    "n = level_number(37)\n",
-    "pprint(jb.cells[n])\n",
+    "# n = level_number(192)\n",
+    "display_node(jb.cells[14])\n",
     "n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "partial_pdf(33, 40, 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cell_type': 'markdown',\n",
-      " 'metadata': {},\n",
-      " 'source': '## Selection\\n'\n",
-      "           '\\n'\n",
-      "           \"Let's briefly go over how to use brackets for selection based off \"\n",
-      "           'of comparison operators.'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "pprint(jb.cells[33])"
    ]
   },
   {
