cell rendering from nbformat

--- a/jbnp to images post.ipynb
+++ b/jbnp to images post.ipynb
@@ -87,7 +87,36 @@
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython.display import display, HTML, Markdown, Code\n",
+    "\n",
+    "\n",
+    "def display_node(cell):\n",
+    "    if cell['cell_type'] == 'markdown':\n",
+    "        # Render markdown cells\n",
+    "        display(Markdown(''.join(cell['source'])))\n",
+    "    elif cell['cell_type'] == 'code':\n",
+    "        # Render code cells\n",
+    "        display(Code(''.join(cell['source']), language=\"python\"))\n",
+    "        \n",
+    "        # If there are outputs, render them as well\n",
+    "        for output in cell.get('outputs', []):\n",
+    "            if output['output_type'] == 'stream':\n",
+    "                # Output text stream (e.g., stdout)\n",
+    "                print(output['text'])\n",
+    "            elif output['output_type'] == 'execute_result':\n",
+    "                # Handle execute_result outputs\n",
+    "                data = output['data']\n",
+    "                if 'text/plain' in data:\n",
+    "                    # Display plain text results (e.g., 42 or other results)\n",
+    "                    print(data['text/plain'])\n",
+    "                if 'text/html' in data:\n",
+    "                    # If there’s HTML, render it (useful for richer outputs)\n",
+    "                    display(HTML(data['text/html']))\n",
+    "                if 'application/json' in data:\n",
+    "                    # Render JSON output if present\n",
+    "                    display(JSON(data['application/json']))"
+   ]
   },
   {
    "cell_type": "code",
