--- a/jbnp to images post.ipynb
+++ b/jbnp to images post.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,14 +179,21 @@
     "\n",
     "# partial_pdf([1, 5], save_as=2)\n",
     "# partial_pdf(range(31, 33+1), save_as=4)\n",
-    "partial_pdf(chain(range(38, 44+1), []), save_as=5)"
+    "partial_pdf(chain([15, 14], range(16, 21+1), []), save_as=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -263,16 +270,16 @@
        ".output_html .vg { color: #19177C } /* Name.Variable.Global */\n",
        ".output_html .vi { color: #19177C } /* Name.Variable.Instance */\n",
        ".output_html .vm { color: #19177C } /* Name.Variable.Magic */\n",
-       ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"n\">df</span>\n",
+       ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"n\">df</span><span class=\"o\">.</span><span class=\"n\">drop</span><span class=\"p\">(</span><span class=\"s1\">&#39;E&#39;</span><span class=\"p\">,</span><span class=\"n\">axis</span><span class=\"o\">=</span><span class=\"mi\">0</span><span class=\"p\">)</span>\n",
        "</pre></div>\n"
       ],
       "text/latex": [
        "\\begin{Verbatim}[commandchars=\\\\\\{\\}]\n",
-       "\\PY{n}{df}\n",
+       "\\PY{n}{df}\\PY{o}{.}\\PY{n}{drop}\\PY{p}{(}\\PY{l+s+s1}{\\PYZsq{}}\\PY{l+s+s1}{E}\\PY{l+s+s1}{\\PYZsq{}}\\PY{p}{,}\\PY{n}{axis}\\PY{o}{=}\\PY{l+m+mi}{0}\\PY{p}{)}\n",
        "\\end{Verbatim}\n"
       ],
       "text/plain": [
-       "df"
+       "df.drop('E',axis=0)"
       ]
      },
      "metadata": {},
@@ -282,18 +289,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          W         X         Y         Z       new\n",
-      "A  2.706850  0.628133  0.907969  0.503826  3.614819\n",
-      "B  0.651118 -0.319318 -0.848077  0.605965 -0.196959\n",
-      "C -2.018168  0.740122  0.528813 -0.589001 -1.489355\n",
-      "D  0.188695 -0.758872 -0.933237  0.955057 -0.744542\n",
-      "E  0.190794  1.978757  2.605967  0.683509  2.796762\n"
+      "          W         X         Y         Z\n",
+      "A  2.706850  0.628133  0.907969  0.503826\n",
+      "B  0.651118 -0.319318 -0.848077  0.605965\n",
+      "C -2.018168  0.740122  0.528813 -0.589001\n",
+      "D  0.188695 -0.758872 -0.933237  0.955057\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div class=\"output_html\"><div>\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -302,7 +308,6 @@
        "      <th>X</th>\n",
        "      <th>Y</th>\n",
        "      <th>Z</th>\n",
-       "      <th>new</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -312,7 +317,6 @@
        "      <td>0.628133</td>\n",
        "      <td>0.907969</td>\n",
        "      <td>0.503826</td>\n",
-       "      <td>3.614819</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
@@ -320,7 +324,6 @@
        "      <td>-0.319318</td>\n",
        "      <td>-0.848077</td>\n",
        "      <td>0.605965</td>\n",
-       "      <td>-0.196959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
@@ -328,7 +331,6 @@
        "      <td>0.740122</td>\n",
        "      <td>0.528813</td>\n",
        "      <td>-0.589001</td>\n",
-       "      <td>-1.489355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
@@ -336,19 +338,10 @@
        "      <td>-0.758872</td>\n",
        "      <td>-0.933237</td>\n",
        "      <td>0.955057</td>\n",
-       "      <td>-0.744542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>E</th>\n",
-       "      <td>0.190794</td>\n",
-       "      <td>1.978757</td>\n",
-       "      <td>2.605967</td>\n",
-       "      <td>0.683509</td>\n",
-       "      <td>2.796762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "</div></div>"
+       "</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -356,24 +349,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from pprint import pprint\n",
     "\n",
-    "# n = level_number(192)\n",
-    "display_node(jb.cells[14])\n",
-    "n"
+    "n = level_number(197)\n",
+    "print(n)\n",
+    "display_node(jb.cells[n])"
    ]
   },
   {
@@ -382,6 +365,53 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import module\n",
+    "from pdf2image import convert_from_path\n",
+    "\n",
+    "\n",
+    "# Store Pdf with convert_from_path function\n",
+    "images = convert_from_path('example.pdf')\n",
+    "\n",
+    "for i in range(len(images)):\n",
+    "  \n",
+    "      # Save pages as images in the pdf\n",
+    "    images[i].save('page'+ str(i) +'.jpg', 'JPEG')"
+   ]
   }
  ],
  "metadata": {
