--- a/pandas/notes/03-DataFrames.ipynb
+++ b/pandas/notes/03-DataFrames.ipynb
@@ -16,14 +16,12 @@
     "collapsed": true
    },
    "source": [
-    "# DataFrames\n",
-    "\n",
-    "DataFrames are the workhorse of pandas and are directly inspired by the R programming language. We can think of a DataFrame as a bunch of Series objects put together to share the same index. Let's use pandas to explore this topic!"
+    "# DataFrames\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(randn(5,4),index='A B C D E'.split(),columns='W X Y Z'.split())"
+    "df = pd.DataFrame(randn(5,4), index='A B C D E'.split(), columns='W X Y Z'.split())"
    ]
   },
   {
@@ -665,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can also drop rows this way:"
+    "** Removing Rows**"
    ]
   },
   {
@@ -1347,7 +1345,7 @@
    "source": [
     "## More Index Details\n",
     "\n",
-    "Let's discuss some more features of indexing, including resetting the index or setting it something else. We'll also talk about index hierarchy!"
+    "Let's discuss some more features of indexing, including resetting the index or setting it something else."
    ]
   },
   {
@@ -1896,9 +1894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multi-Index and Index Hierarchy\n",
-    "\n",
-    "Let us go over how to work with Multi-Index, first we'll create a quick example of what a Multi-Indexed DataFrame would look like:"
+    "## Multi-Index and Index Hierarchy\n"
    ]
   },
   {
@@ -2382,7 +2378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
